# generate-app-icons

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: img_list.rs  main.rs
