[package]
name = "generate-app-icons"
version = "0.1.3"
edition = "2021"
authors = ["Anonymous <dnrops@outlook.com>"]
description = "A CLI for generate app icons for ios ipad Watch Mac Android devices"
readme = "README.md"
keywords = ["generate","icons","ios","Android","ipad"]
categories = ["development-tools"]
license = "MIT"
documentation = "https://docs.rs/generate-app-icons"
repository = "https://gitlab.com/andrew_ryan/generate-app-icons"
homepage = "https://dnrops.gitee.io"

[dependencies]
doe = "0.2.26"
image = "0.24.7"
ico = "0.3"
icns = "0.3.1"
